# desconexiones_s13

./: .gitignore  CHANGELOG.md  DATABASE_SETUP.md  DOCUMENTATION_INDEX.md  FASE_2_RESUMEN.md  IMPLEMENTACION_COMPLETADA.md  MIGRATION_CHECKLIST.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_DOCUMENTATION_INDEX.md  PHASE_3_REFACTORING_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE_PHASE_3.md  README.md  ROADMAP.md  SERIALIZERS_VIEWSETS_COMPLETADO.md  STATUS_REPORT.md  USAGE_GUIDE_ETL_SERVICES.md  main.py
backend/: .env.example  main.py  pyproject.toml  requirements.txt  test_api.py
backend/apps/analytics/: __init__.py  apps.py  urls.py  views.py
backend/apps/auth/: permissions.py  urls.py
backend/apps/authentication/: __init__.py  apps.py  permissions.py
backend/apps/organization/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/organization/migrations/: 0001_initial.py  0002_user_role.py
backend/apps/registers/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/registers/migrations/: 0001_initial.py  0002_register_estatus_final_register_responsable_and_more.py
backend/apps/vehicles/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/vehicles/migrations/: 0001_initial.py  (+1 more)
backend/core/: asgi.py  http_client.py  settings.py  urls.py  wsgi.py
backend/middleware/: error_handler.py  logging.py
backend/services/: analytics_service.py  business_rules.py  etl_service.py  geofence_service.py
docs/: API_ENDPOINTS.md  (+4 more)
(+30 files in other folders)
